<resources>
    <string name="app_name">TechMart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="autobots">A U T O  B O T S</string>
    <string name="developed">DEVELOPED BY</string>
    <string name="login_btn">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="title_activity_demo">demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="current_delivery_address">Current Delivery Address</string>
    <string name="new_delivery_address">New Delivery Address</string>
    <string name="change_address">Change Address</string>
    <string name="address_msg">NOTE: If not specified, all your orders will be delivered to this location</string>
    <string name="casing_label">Azus ROG Max Casing</string>
    <string name="cpu_label">Intel i9 Processor</string>
    <string name="mouse_label">ROG Gaming Mouse</string>
    <string name="monitor_label">Acer Predetor 27" LCD</string>
    <string name="keyboard_label">Razor Gaming Keyboard</string>
    <string name="graphic_card_label">NVidia RTX2060</string>
    <string name="home_title">Popular Products</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="in_stock">In Stock</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="place_order_btn">Place Order</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="discount_coupon">Discount Coupon</string>
    <string name="deliver_type">Delivery Type</string>
    <string name="express_delivery">Express Delivery</string>
    <string name="regular_delivery">Regular Delivery</string>
    <string name="place_order_title">Place Your Order</string>
    <string name="order_no">Order ID</string>
    <string name="net_amount">Net Amount</string>
    <string name="order_history_date">Date</string>
    <string name="delete_order_history_btn">Delete Order History</string>
    <string name="update_order">Update Order</string>
    <string name="update_order_note">NOTE: You can update an order only within 24 hours from the placement</string>
    <string name="update_account_btn">Update Account</string>
    <string name="cart_title">My Cart</string>
    <string name="order_history_title">My Orders</string>
    <string name="change_delivery_address">Change Delivery Address</string>
    <string name="update_order_details">Update Order Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_order_note">NOTE: You can cancel an order only within 24 hours from the placement</string>
    <string name="update_order_note2">NOTE: You can not update items and quantities</string>

    <string name="menu_home">My Account</string>
    <string name="menu_gallery">My Cart</string>
    <string name="menu_slideshow">Order History</string>
    <string name="search_title_rider">Order History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--Auth stack strings-->
    <string name="userNameHint">User Name</string>
    <string name="PasswordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="mobileHint">Phone Number</string>
    <string name="signInBtn">Are You a Delivery Person?</string>
    <string name="signInBtn_">Sign In</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="nextBtn">Next</string>
    <string name="newPassword">New Password</string>
    <string name="confirm">Confirm</string>

    <string name="pending">Pending Deliveries</string>
    <string name="item">Item Details</string>
    <string name="receipt">Receipt</string>
    <string name="history">Completed Deliveries</string>

    <string name="deliverBtn">Delivered</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>


    <!--Auth messages-->
    <string name="userNameRequired">User name is required.</string>
    <string name="invalidUserName">Invalid user name.</string>
    <string name="invalidEmail">Invalid email address.</string>
    <string name="nameRequired">Name is required.</string>
    <string name="mobileRequired">Email is required.</string>
    <string name="passwordRequired">Password is required.</string>
    <string name="invalidMobile">Invalid email format.</string>
    <string name="passwordNotMatch">Password doesn\'t match.</string>
    <string name="invalidPassword">Invalid password format.</string>
    <string name="passwordHelper">Password must contain at least: 1 Uppercase, 1 Lowercase, 1 Number, 6 Characters.</string>
    <string name="login_success">Login Successful.</string>
    <string name="registerOtpMsg">We\'ll send a verification code to this number.</string>
    <string name="forgotPassword">Forgot Password?</string>


    <!--delivery stack strings-->
    <string name="toolBarTitle">Delivery</string>
</resources>